--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,6 +2,10 @@
     border-radius: 0px !important;
 }
 
+.card {
+    display: none;
+}
+
 .card-header {
     background-color: #343a40 !important;
     color: white;
