--- a/src/views/index.html
+++ b/src/views/index.html
@@ -48,6 +48,7 @@
             </div>
             <button class="btn btn-primary" type="submit" id="display">Anzeigen</button>
         </form>
+        <img id="landkreisImage" src="" class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" alt="">
         <textarea id="RKITarget" cols="100" style="background-color: #f1f1f1; border: none; margin: auto;"></textarea>
     </div>
     <div class="row" id="card-row">
