--- a/src/views/index.html
+++ b/src/views/index.html
@@ -14,6 +14,7 @@
   integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
   crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
+    <script src="../QueryResultRenderer.js"></script>
     <script src="../LandkreisPictureQuery.js"></script>
     <script src="../RKIFetcher.js"></script>
   </head>
@@ -48,8 +49,10 @@
             </div>
             <button class="btn btn-primary" type="submit" id="display">Anzeigen</button>
         </form>
+        <hr>
+        <br>
         <img id="landkreisImage" src="" class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" alt="">
-        <textarea id="RKITarget" cols="100" style="background-color: #f1f1f1; border: none; margin: auto;"></textarea>
+        <h4 id="landkreisTitle"></h4>
     </div>
     <div class="row" id="card-row">
         <div class="col">
@@ -99,6 +102,8 @@
         </div>
         
     </div>
+    <h4 id="apiReturnTitle">What the API returned:</h4>
+    <textarea id="RKITarget" cols="100" style="background-color: #f1f1f1; border: none; margin: auto;"></textarea>
     <script>
 
         waitForLandkreise();
