--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,6 +2,12 @@
     border-radius: 0px !important;
 }
 
+.container {
+    padding: 18px;
+    -webkit-box-shadow: 1px 2px 15px -1px rgba(0,0,0,0.57); 
+    box-shadow: 1px 2px 15px -1px rgba(0,0,0,0.57);
+}
+
 .card {
     display: none;
 }
@@ -25,6 +31,10 @@ body {
 
 #card-row {
     padding: 24px;
+}
+
+#bottomnav {
+    margin-top: 80px;
 }
 
 #RKITarget, #apiReturnTitle {
