--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 .card>*, .card {
     border-radius: 0px !important;
 }
@@ -6,6 +10,7 @@
     padding: 18px;
     -webkit-box-shadow: 1px 2px 15px -1px rgba(0,0,0,0.57); 
     box-shadow: 1px 2px 15px -1px rgba(0,0,0,0.57);
+    background: white;
 }
 
 .card {
@@ -19,6 +24,11 @@
 
 body {
     text-align: center;
+    backdrop-filter: blur(10px);
+}
+
+#nav-top {
+    position: sticky !important;
 }
 
 #title {
@@ -29,6 +39,10 @@ body {
     margin: 24px;
 }
 
+#inputFormTitle {
+    margin-top: 60px;
+}
+
 #card-row {
     padding: 24px;
 }
@@ -37,6 +51,63 @@ body {
     margin-top: 80px;
 }
 
+@media only screen and (max-width: 500px) {
+
+    #landkreisImage {
+        max-width: 80%;
+    }
+
+    #RKITarget {
+        max-width: 80%;
+        margin: auto;
+    }
+  }
+
+
+
 #RKITarget, #apiReturnTitle {
     display: none;
+}
+
+.pulse {
+    border-color: #007bff;
+    -webkit-animation-name: pulse;
+    animation-name: pulse;
+    -webkit-animation-duration: 2s;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    }
+    @-webkit-keyframes pulse {
+    0% {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+    }
+    50% {
+    -webkit-transform: scale3d(1.05, 1.05, 1.05);
+    transform: scale3d(1.05, 1.05, 1.05);
+    }
+    100% {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+    }
+    }
+    @keyframes pulse {
+    0% {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+    }
+    50% {
+    -webkit-transform: scale3d(1.05, 1.05, 1.05);
+    transform: scale3d(1.05, 1.05, 1.05);
+    }
+    100% {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+    }
+    }
+
+.pulse:focus {
+    animation-play-state: paused;
 }
