--- a/src/views/index.html
+++ b/src/views/index.html
@@ -110,7 +110,7 @@
         <h4 id="apiReturnTitle">What the API returned:</h4>
         <textarea id="RKITarget" cols="100" style="background-color: #f1f1f1; border: none; margin: auto;"></textarea>
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-secondary" id="bottomnav">
+        <nav class="navbar navbar-dark bg-secondary" id="bottomnav">
             <a class="navbar-brand text-white">RKI Fetcher</a>
             <button class="navbar-toggler" data-target="#my-nav" data-toggle="collapse" aria-controls="my-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
