--- a/src/views/index.html
+++ b/src/views/index.html
@@ -38,7 +38,7 @@
 
     <div class="container">
         <h1 id="title">WhatAboutUs</h1>
-        <h6>Aktuelle Statistiken, schnell und einfach!</h6>
+        <h6>Aktuelle Corona-Statistiken, schnell und einfach!</h6>
         <hr>
         <form method="get" action="">
             <div class="form-group">
@@ -47,7 +47,7 @@
                 <datalist id="landkreise">
                     
                 </datalist>
-                <label for="landkreis">Tip: The input supports autocomplete. Doubleclick to toggle autocomplete.</label>
+                <label for="landkreis">Tip: Die Eingabe verfügt über Autovervollständigung!</label>
             </div>
             <button class="btn btn-primary" type="submit" id="display">Anzeigen</button>
         </form>
@@ -105,10 +105,20 @@
             
         </div>
 
-        <hr>
-
-        <h4 id="apiReturnTitle">What the API returned:</h4>
-        <textarea id="RKITarget" cols="100" style="background-color: #f1f1f1; border: none; margin: auto;"></textarea>
+        <div id="shareAndAPI">
+            <h6>Teile dieses Ergebnis mit deinen Freunden oder deiner Familie:</h6>
+            <button class="btn btn-primary" type="button" style="padding-left: 64px; padding-right: 64px;"><i class="fa fa-users" aria-hidden="true"></i> Teilen</button>
+    
+            <hr>
+    
+            <h4 id="apiReturnTitle">What the API returned:</h4>
+            <textarea id="RKITarget" cols="100" style="background-color: #f1f1f1; border: none; margin: auto;"></textarea>
+    
+            <h5 id="apiTitle">Benutze die API selbst:</h5>
+    
+            <a class="btn btn-primary" href="https://npgeo-corona-npgeo-de.hub.arcgis.com/" target="_blank" role="button"><i class="fa fa-wrench" aria-hidden="true"></i> RKI API</a>
+        </div>
+        
 
         <nav class="navbar navbar-dark bg-secondary" id="bottomnav">
             <a class="navbar-brand text-white">RKI Fetcher</a>
