update Frontend, add image source

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -40,7 +40,15 @@ body {
     color: #007bff;
 }
 
+#landkreisTitle {
+    margin-top: 48px;
+}
+
 #shareAndAPI {
+    display: none;
+}
+
+#imageLabel {
     display: none;
 }
 
