--- a/src/views/index.html
+++ b/src/views/index.html
@@ -54,6 +54,7 @@
         <hr>
         <br>
         <img id="landkreisImage" src="" class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" alt="">
+        <label for="landKreisImage" id="imageLabel"></label>
         <h4 id="landkreisTitle"></h4>
 
         <div class="row" id="card-row">
@@ -111,7 +112,7 @@
     
             <hr>
     
-            <h4 id="apiReturnTitle">What the API returned:</h4>
+            <h4 id="apiReturnTitle">Ergebnis der API:</h4>
             <textarea id="RKITarget" cols="100" style="background-color: #f1f1f1; border: none; margin: auto;"></textarea>
     
             <h5 id="apiTitle">Benutze die API selbst:</h5>
