--- a/src/css/style.css
+++ b/src/css/style.css
@@ -26,6 +26,10 @@ html {
 body {
     text-align: center;
     backdrop-filter: blur(10px);
+    background-image: url("background.jpg") !important;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 #nav-top {
@@ -126,13 +130,15 @@ body {
     border-radius: 25px !important;
     height: 256;
     width: 256px;
+    -webkit-box-shadow: 1px 2px 15px -1px rgba(0,0,0,0.28); 
+    box-shadow: 1px 2px 15px -1px rgba(0,0,0,0.28);
     transition-duration: 0.3s;
 }
 
 .hotspot:hover, .neighbour:hover, .safe:hover {
-    -webkit-box-shadow: 1px 2px 15px -1px rgba(0,0,0,0.57); 
-    box-shadow: 1px 2px 15px -1px rgba(0,0,0,0.57);
-    transform: translateY(-4px);
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    transform: translateY(4px);
     cursor: pointer;
     transition-duration: 0.3s;
 }
@@ -231,3 +237,20 @@ body {
     background-color: DodgerBlue !important; 
     color: #ffffff; 
   }
+
+  .fa-spinner {
+    font-size: 20px;
+    animation-name: spin;
+    animation-duration: 1000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+  }
+
+  @keyframes spin {
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(360deg);
+    }
+}
